# meridian

./: .gitignore  CLAUDE.md  PRD.md  README.md  claude (5).md  design-tokens.md  pyproject.toml  requirements.txt  splunk_evals.ipynb
api/: server.py
data/incidents/: incidents.jsonl
data/spl_knowledge/: patterns.jsonl
demo/: console.py
docs/: competitive-landscape.md  model-evaluation.md  prd.md  splunk-ai-foundations-demo.md
phase1_mcp/: config.yaml  server.py
phase1_mcp/tools/: ci.py  cisco.py  sp.py  splunk.py
phase2_5_classifier/: __init__.py  classifier.py  models.py
phase2_agent/: commander.py  pre_triage.py  prompts.py  states.py
phase2_agent/scenarios/: README.md  bgp_flap_sj.json  cpu_spike_sj.json  false_positive_demo.json  packet_loss_sj.json
phase3_evaluator/: evaluator.py  mttd.py  report.py
phase3_evaluator/models/: constrained.py  generic.py
scripts/: run_investigation.py  seed_pinecone.py
tests/: test_fsm.py  test_mcp.py  test_rag.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: EvaluatorPanel.tsx  EvidencePanel.tsx  FSMDiagram.tsx  ForecastStrip.tsx  FullTraceOverlay.tsx  ReportPanel.tsx  RunHistoryPanel.tsx  ToolCallFeed.tsx
ui/src/data/: forecasts.ts
ui/src/utils/: runArchive.ts  transitionReasons.ts
vigil/: __init__.py  classifier.py  config.py  evaluator.py  fsm.py  mcp_client.py  rag.py
