[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigil"
version = "0.1.0"
description = "Vigil — Splunk Agentic Ops Incident Commander"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.3.0",
    "transitions>=0.9.2",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pinecone-client>=3.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
vigil-demo = "demo.console:main"
vigil-investigate = "phase2_agent.commander:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["phase1_mcp*", "phase2_agent*", "phase3_evaluator*", "demo*", "vigil*", "api*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
